text alignment inside input corrected

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ main .game .count input{
     background-color: transparent;
     font-size: 24px;
     color: #ECECEC;
+    text-align: center;
 }
 
 @media screen and (max-width: 1000px) {
